--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,17 @@
 spring:
-  # 데이터베이스 설정
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/aievaluator_db?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
-    username: root
-    password: ${DB_PASSWORD}
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: "1047847077985-vubdj6hbsrg1r1e5rd8p0eb5l0r17r5m.apps.googleusercontent.com"
-            client-secret: ${GOOGLE_CLIENT_SECRET}
-            scope:
-              - profile
-              - email
+  # 기본으로 활성화할 프로필을 'local'로 지정합니다.
+  # 서버 배포 시 실행 옵션으로 'prod'를 지정하면 이 설정이 무시되고 prod 설정이 활성화됩니다.
+  profiles:
+    active: local
 
   # JPA (Java Persistence API) 설정
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: update # 애플리케이션 실행 시 DB 스키마 자동 업데이트
     properties:
       hibernate:
-        format_sql: true
-    show-sql: true
+        format_sql: true # SQL 쿼리를 보기 좋게 포맷팅
+    show-sql: true # 실행되는 SQL 쿼리를 로그에 표시
 
   # 파일 업로드 용량 설정
   servlet:
@@ -33,8 +21,10 @@ spring:
 
 logging:
   level:
+    # SQL 파라미터 값을 로그에 표시 (디버깅에 유용)
     org.hibernate.type.descriptor.sql: trace
 
+# Swagger (API 문서) 설정
 springdoc:
   swagger-ui:
     path: /swagger-ui.html   # Swagger UI 접속 경로
@@ -46,7 +36,3 @@ springdoc:
     title: "AI AutoGrader API"
     description: "딥러닝 기초 과제 자동 채점 시스템 API 명세서"
     version: "v1.0.0"
-
-
-external:
-  python-api-url: "http://localhost:8000"
