--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     // Swagger(OpenAPI)
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
 
     // 비동기 HTTP 요청
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
